--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span>tag span 2</span>
         <a target="blank" href="http://misto-izium.pp.ua"> link in a new window </a>
     <img src="img/waterAndfire.jpg" alt="picture didn't">
+    <p>one passage, but written on win7 x 64 laptop </p>
     <ul>
         <li>Lorem</li> <li>ipsum</li> <li>dolor</li> <li>sit</li> <li>amet</li>
     </ul>
