--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <Title> Знакомство с html тегами2</Title>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
-    </head>
-    <body>
-        <h1>Lorem, ipsum.</h1>
-        <h2>Lorem, ipsum.</h2>
-        <h3>Lorem, ipsum.</h3>
-        <h4>Lorem, ipsum.</h4>
-        <h5>Lorem, ipsum.</h5>
-        <h6>Lorem, ipsum.</h6>
-        <p> абзац№1 Lorem ipsum dolor sit, <span>consectetur adipisicing elit </span> amet . <a target="blank" href="http://misto-izium.pp.ua">Ullam a eveniet assumenda quibusdam, nobis </a> vitae tempora, ratione odit numquam ut officiis eius in et earum, unde repellat quae corporis.</p>
-        <p> абзац№2 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere sint dolorem voluptatem officia atque vitae, pariatur, magni illum dolorum reiciendis minus eligendi eveniet ipsam corporis eos repudiandae. Minus, tenetur nostrum.</p>
-        <span> tag span 1 </span>
-        <span>tag span 2</span>
-        <a target="blank" href="http://misto-izium.pp.ua"> link in a new window </a>
-    <img src="img/waterAndfire.jpg" alt="picture didn't">
-    <p>one passage, but written on win7 x 64 laptop </p>
-    <ul>
-        <li>Lorem</li> <li>ipsum</li> <li>dolor</li> <li>sit</li> <li>amet</li>
-    </ul>
-    <ol><li>Lorem</li> <li>ipsum dolor</li> <li>sit</li> <li>amet</li> <li>consectetur</li> <li>adipisicing</li>.</ol>
-    </body>
+  <head>
+    <title>homework01</title>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./">WebStudio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380961111111</a></li>
+      </ul>
+    </header>
+    <div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+      </section>
+    </div>
+  </body>
 </html>
