--- a/index.html
+++ b/index.html
@@ -24,6 +24,85 @@
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
       </section>
+      <a href="">Заказать услугу</a>
     </div>
+    <section>
+      <h2>Наши качества</h2>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img src="./images/box1.jpg" width="370px" alt="руки на клавиатуре" />
+        </li>
+        <li>
+          <img src="./images/box2.jpg" width="370px" alt="телефон в руках" />
+        </li>
+        <li>
+          <img src="./images/box3.jpg" width="370px" alt="планшет в руке" />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <figure>
+        <img src="./images/img.jpg" alt="man" />
+        <figcaption>
+          <h4>Игорь Демьяненко</h4>
+          <p>Product Designer</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/img1.jpg" alt="man" />
+        <figcaption>
+          <h4>Ольга Репина</h4>
+          <p>Frontend Developer</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/img2.jpg" alt="man" />
+        <figcaption>
+          <h4>Николай Тарасов</h4>
+          <p>Marketing</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/img3.jpg" alt="man" />
+        <figcaption>
+          <h4>Михаил Ермаков</h4>
+          <p>UI Designe</p>
+        </figcaption>
+      </figure>
+    </section>
   </body>
 </html>
