--- a/index.html
+++ b/index.html
@@ -63,46 +63,54 @@
       <h2>Чем мы занимаемся</h2>
       <ul>
         <li>
-          <img src="./images/box1.jpg" width="370px" alt="руки на клавиатуре" />
+          <img src="./images/box1.jpg" width="370" alt="руки на клавиатуре" />
         </li>
         <li>
-          <img src="./images/box2.jpg" width="370px" alt="телефон в руках" />
+          <img src="./images/box2.jpg" width="370" alt="телефон в руках" />
         </li>
         <li>
-          <img src="./images/box3.jpg" width="370px" alt="планшет в руке" />
+          <img src="./images/box3.jpg" width="370" alt="планшет в руке" />
         </li>
       </ul>
     </section>
     <section>
       <h2>Наша команда</h2>
       <figure>
-        <img src="./images/img.jpg" alt="man" />
+        <img src="./images/img.jpg" alt="man" width="270" />
         <figcaption>
           <h4>Игорь Демьяненко</h4>
           <p>Product Designer</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="./images/img1.jpg" alt="man" />
+        <img src="./images/img1.jpg" alt="woman" width="270" />
         <figcaption>
           <h4>Ольга Репина</h4>
           <p>Frontend Developer</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="./images/img2.jpg" alt="man" />
+        <img src="./images/img2.jpg" alt="man" width="270" />
         <figcaption>
           <h4>Николай Тарасов</h4>
           <p>Marketing</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="./images/img3.jpg" alt="man" />
+        <img src="./images/img3.jpg" alt="man" width="270" />
         <figcaption>
           <h4>Михаил Ермаков</h4>
           <p>UI Designe</p>
         </figcaption>
       </figure>
     </section>
+    <footer>
+      <h4><span>Web</span>Studio</h4>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li><a href="info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
